<resources>
    <string name="app_name">CalorieCompanion</string>
    <string name="food_name_hint">Enter the name of the food.</string>
    <string name="food_name_label">Food Name</string>
    <string name="food_category_label">Category</string>
    <string name="macros_label">Macronutrients</string>
    <string name="new_food">Add Food</string>
    <string name="new_training">Add Training</string>
    <string name="food_save_text">Save Food</string>
    <string name="delete_food_label">Delete Food</string>
    <string name="back_button">Back Button</string>
    <string name="protein">Enter amount of protein / 100g</string>
    <string name="fat">Enter amount of fat / 100g</string>
    <string name="carbohydrates">Enter amount of carbohydrates / 100g</string>
    <string name="food_category">Choose food category</string>
    <string name="foodText">Placeholder</string>
    <string name="training">Training list</string>
    <string name="dailyBreakfast">Breakfast</string>
    <string name="dailyLunch">Lunch</string>
    <string name="dailyDinner">Dinner</string>
    <string name="dailySnacks">Snacks</string>
    <string name="dailyTraining">Training</string>
    <string name="calories">|  %1$s kcal</string>
    <string name="trainingCalories"> %1$s kcal /</string>
    <string name="shortProtein">%1$s P</string>
    <string name="shortFat">%1$s F</string>
    <string name="shortCarbs">%1$s C</string>
    <string name="calPer100">/ 100g</string>
    <string name="oneHundred">100</string>
    <string name="thirty">30</string>
    <string name="g">g</string>
    <string name="welcomeLabel">Welcome!</string>
    <string name="welcomeText">Before you start using this app, we would like you to fill in some information.</string>
    <string name="nameText">First and last name</string>
    <string name="ageText">Age</string>
    <string name="lengthText">Length (in centimeters)</string>
    <string name="weightText">Weight (in kilos)</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="activityLevel">Activity Level</string>
    <string name="letsGo">Lets Go!</string>
    <string name="chooseGoal">Choose goal</string>
    <string name="goalText">Next, you have to select what your goal is!</string>
    <string name="goalDesc">Do you want to: </string>
    <string name="loseWeight">Lose weight</string>
    <string name="maintainWeight">Maintain weight</string>
    <string name="gainWeight">Gain weight</string>
    <string name="next">Next</string>
    <string name="currentCalories">Calories:</string>
    <string name="eaten">EATEN</string>
    <string name="kcalLeft">KCAL LEFT</string>
    <string name="burned">BURNED</string>
    <string name="clearList">Clear all items</string>
    <string name="trainingTime">%1$s min</string>
    <string name="minutes">min</string>
    <string name="home">Home</string>
    <string name="info">This image is, and will only be used in this application</string>
</resources>