<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/food_photo"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@android:color/darker_gray"
                        android:cropToPadding="true"
                        android:scaleType="centerInside" />

                    <ImageButton
                        android:id="@+id/food_camera"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/ic_menu_camera" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/food_label"
                        style="?android:listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/food_name_label" />

                    <EditText
                        android:id="@+id/food_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/food_name_hint" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/food_details"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/food_category_label" />

                <Spinner
                    android:id="@+id/food_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/food_category"
                    android:spinnerMode="dialog" />

                <TextView
                    android:id="@+id/textView"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/macros_label" />

                <EditText
                    android:id="@+id/food_protein"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/protein"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/food_fat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fat"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/food_carbohydrates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/carbohydrates"
                    android:inputType="number" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/save_food"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/food_save_text" />

                    <Button
                        android:id="@+id/delete_food"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_food_label" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>