<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/food_photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@android:color/darker_gray"
                    android:cropToPadding="true"
                    android:scaleType="centerInside" />

                <ImageButton
                    android:id="@+id/food_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <TextView
            android:id="@+id/food_label"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_name_label" />

        <EditText
            android:id="@+id/breakfast_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_name_hint" />
    </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/food_details"
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_details_label" />

            <Spinner
                android:id="@+id/breakfast_food_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:prompt="@string/food_category" />

            <EditText
                android:inputType= "number"
                android:id="@+id/breakfast_food_protein"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/protein" />

            <EditText
                android:inputType= "number"
                android:id="@+id/breakfast_food_fat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fat" />

            <EditText
                android:inputType= "number"
                android:id="@+id/breakfast_food_carbohydrates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/carbohydrates" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_save_text" />

                <Button
                    android:id="@+id/delete_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_food_label" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>